# ghactions

./: .gitignore  .lgtm.yml  CMakeLists.txt  Makefile  README.md  configure
.github/workflows/: build-project.yml  testing.yml
examples/: CMakeLists.txt  hw.c
include/: libfoobar.h
scripts/: attrs.py  generate_src_archive.sh  style.sh
scripts/pkgs/: alpine:3.12.0.sh  debian:bullseye.sh
src/: foobar.c
tools/: CMakeLists.txt
